[package]
name = "etrain"
version = "0.1.0"
authors = ["Ethan Hall <ethan@ehdev.io>"]

[lib]
name = "etrain"
path = "src/etrain/lib.rs"

[dependencies]
slog = { version = "2", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2"
slog-async = "2"
yaml-rust = "0.3.5"
regex = "0.2.2"