[package]
name = "inc-lib"
version = "0.1.6"
authors = ["Ethan Hall <ethan@ehdev.io>"]

[dependencies]
log = "0.3"
clap = "2"
regex = "0.2"
names = "0.11.0"
fern = "0.4.3"
chrono = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
dirs = "1.0.3"
url = "1.6"
hyper-tls = "0.1.2"
serde_json = "1.0"
json = "*"
futures = "0.1"
hyper = "0.11"
tokio-core = "0.1"
indicatif = "0.9.0"

[dev-dependencies]
assert_cli = "0.5"
tempdir = "0.3"