[package]
name = "inc-lib"
version = "0.1.6"
authors = ["Ethan Hall <ethan@ehdev.io>"]

[dependencies]
log = "0.3"
clap = "2"
regex = "0.2"
url = "1.5.1"
names = "0.11.0"
fern = "0.5.8"
chrono = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
dirs = "1.0.3"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.1.5"
libc = "0.2"

[dev-dependencies]
assert_cli = "0.5"
tempdir = "0.3"