[package]
name = "inc"
version = "0.1.9"
authors = ["Ethan Hall <ethan@ehdev.io>"]

[dependencies]
log = "0.3"
clap = "2"
inc-lib = { path = "../inc-lib" }
inc-commands = { path = "../inc-commands" }

[dev-dependencies]
assert_cli = "0.5"
tempdir = "0.3"
toml = "0.4"
serde = "1.0.15"
serde_derive = "1.0.99"
