[package]
name = "inc-commands"
version = "0.1.0"
authors = ["Ethan Hall <ethan@ehdev.io>"]

[dependencies]
slog = { version = "2", features = ["max_level_trace", "release_max_level_trace"] }
inc-core = { version = "0.1.0", path = "../core" }
serde = "1.0" # if you're using `derive(Deserialize)`
serde_derive = "1.0" # if you're using `derive(Deserialize)`
docopt = "0.8.1"