[package]
name = "inc-commands"
version = "0.1.0"
authors = ["Ethan Hall <ethan@ehdev.io>"]

[dependencies]
inc-core = { version = "0.1.0", path = "../core" }
serde = "1.0" # if you're using `derive(Deserialize)`
serde_derive = "1.0" # if you're using `derive(Deserialize)`
docopt = "0.8.1"
log = "0.3"
fern = "0.4"
chrono = "0.4.0"