[package]
name = "inc-core"
version = "0.1.0"
authors = ["Ethan Hall <ethan@ehdev.io>"]

[dependencies]
slog = { version = "2", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2"
slog-async = "2"
yaml-rust = "0.3"
docopt = "0.8.1"
regex = "0.2"
url = "1.5.1"
names = "0.11.0"